# Rippleator

./: .gitignore  CMakeLists.txt  README.md
Source/: DebugLogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/GUI/: ChamberVisualizer.cpp  ChamberVisualizer.h  FrequencyVisualizer.cpp  FrequencyVisualizer.h  LevelMeter.cpp  LevelMeter.h  VisualizationsTab.cpp  VisualizationsTab.h  WaveformVisualizer.cpp  WaveformVisualizer.h  ZoneManager.cpp  ZoneManager.h
Source/Models/: Chamber.cpp  Chamber.h  CircularBuffer.h  MicFrequencyBands.h  RayTracer.cpp  RayTracer.h  Zone.h
Source/Utils/: PhysicsHelpers.h
